--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Official Website of Taher Kotwal aka TAHERO - Data Scientist, YouTuber, and Maths Tutor from India.">
+  <meta name="robots" content="index, follow">
   <title>Taher Kotwal | TAHERO</title>
   <style>
     :root {
@@ -124,6 +125,29 @@
     }
   </style>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+
+  <!-- Structured Data for SEO -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Taher Kotwal",
+      "alternateName": "Tahero",
+      "url": "https://iamtahero.github.io/Taher-Portfolio",
+      "sameAs": [
+        "https://www.youtube.com/@taher_editz",
+        "https://www.instagram.com/kotwaltaher12",
+        "https://www.linkedin.com/in/taherkotwal",
+        "https://www.kaggle.com/taherkotwal"
+      ],
+      "description": "Taher Kotwal, also known as Tahero, is a YouTuber, maths tutor, and aspiring data scientist from India. He creates edits related to movies, anime, and politics and is passionate about Data Science and Mathematics.",
+      "jobTitle": "YouTuber, Maths Tutor, Data Science Enthusiast",
+      "worksFor": {
+        "@type": "Organization",
+        "name": "Self-employed"
+      }
+    }
+  </script>
 </head>
 
 <body>
@@ -135,9 +159,20 @@
 
 <section>
   <h2>About Me</h2>
-  <p>I am a passionate creator, YouTuber, Maths tutor, and an aspiring Data Scientist from India. Known for my creative edits on movies, anime, and politics, I’ve built a growing community of 1.3k+ subscribers on YouTube.</p>
-  <p>Beyond content creation, I’m a top academic achiever — scoring 90.80% in SSC and 84.17% in HSC — earning scholarships and excellence awards. Currently pursuing SY BBA(CA), I have completed the IBM Data Science Professional Certificate and job simulations with Deloitte, PwC, Tata, and MasterCard.</p>
-  <p>My dream is to master Data Science, Mathematics, and Statistics — and leave a mark in both the tech and creative worlds. Driven by ambition, passion, and a never-give-up attitude, I am TAHERO — the hero of my own journey.</p>
+  <p>Taher Kotwal is a young and talented individual from India, also known by the nickname "Taher Editz" and "Tahero". He is a YouTuber with around 1.3k subscribers, mainly creating edits related to movies, politics, and anime. Besides YouTube, Taher is also a maths tutor and a top-performing student — he has scored very high marks in academics like 90.80% in 10th SSC and 84.17% in 12th HSC, winning scholarships and awards for his excellence.</p>
+  <p>He is currently pursuing SY BBA (CA) and is deeply passionate about data science, aiming to become a Data Scientist and an expert in Mathematics and Statistics. He has completed the IBM Certified Data Science Professional Certificate, internships, and multiple online job simulations with companies like Deloitte, PwC, Tata, and MasterCard.</p>
+  <p>He also dreams of mastering psychology, gaining new skills, and possibly preparing for SSC CGL to secure a high-paying government job in the future. Taher is hardworking, ambitious, and a true multi-talented individual!</p>
+</section>
+
+
+<section>
+  <h2>Who is Tahero?</h2>
+  <p>Taher Kotwal, also known as Tahero, is a YouTuber, maths tutor, and aspiring data scientist from India. He is known for his creative edits on movies, anime, and politics. With over 1.3k subscribers, Taher is building his brand while aiming to make a mark in the fields of Data Science, Mathematics, and Statistics. His academic excellence and passion for technology set him apart in the digital and educational space.</p>
+</section>
+
+<section>
+  <h2>Who is Taher Editz?</h2>
+  <p>Taher Editz is the creative YouTube alias of Taher Kotwal. Under this name, he creates highly engaging edits on movies, anime, and political topics. His content resonates with fans for its unique style and creativity. With 1.3k+ subscribers, Taher Editz is growing steadily as a content creator, known for his deep dive into pop culture and his editing skills.</p>
 </section>
 
 <section>
