--- a/index.html
+++ b/index.html
@@ -176,6 +176,16 @@
 </section>
 
 <section>
+  <h2>Taher Kotwal</h2>
+  <p>Taher Kotwal, also known as Tahero, is a YouTuber, maths tutor, and aspiring data scientist from India. He is known for his creative edits on movies, anime, and politics. With over 1.3k subscribers, Taher is building his brand while aiming to make a mark in the fields of Data Science, Mathematics, and Statistics. His academic excellence and passion for technology set him apart in the digital and educational space.</p>
+</section>
+
+<section>
+  <h2>Who is Taher?</h2>
+  <p>Taher Kotwal, also known as Tahero, is a YouTuber, maths tutor, and aspiring data scientist from India. He is known for his creative edits on movies, anime, and politics. With over 1.3k subscribers, Taher is building his brand while aiming to make a mark in the fields of Data Science, Mathematics, and Statistics. His academic excellence and passion for technology set him apart in the digital and educational space.</p>
+</section>
+
+<section>
   <h2>Achievements</h2>
   <ul>
     <li>90.80% in SSC (10th Grade) - Scholarship Winner</li>
