--- a/index.html
+++ b/index.html
@@ -105,8 +105,6 @@
       margin-top: 4rem;
       animation: fadeIn 2s ease-in-out;
     }
-
-    /* Animations */
     @keyframes fadeIn {
       from {opacity: 0;}
       to {opacity: 1;}
@@ -115,20 +113,15 @@
       from {opacity: 0; transform: translateY(50px);}
       to {opacity: 1; transform: translateY(0);}
     }
-
-    /* Responsive */
     @media (max-width: 768px) {
       header h1 {font-size: 2.5rem;}
       header p {font-size: 1.2rem;}
       h2 {font-size: 2rem;}
       p, li {font-size: 1rem;}
     }
-
-    /* Hidden Content but SEO Visible */
     .no-display {
-      visibility: hidden; /* Or position: absolute; left: -9999px; */
+      visibility: hidden;
     }
-
   </style>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 
